crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__string_literal_lowered_to_tuple.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 1
    signature_index: 1
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
        result: Unit
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 0
                  value:
                    kind:
                      Aggregate:
                        values:
                          - kind:
                              StringIndex:
                                string_index: 0
                            ty: Pointer
                          - kind:
                              Int:
                                value: 5
                            ty: U32
                    ty:
                      Aggregate:
                        aggregate_index: 0
              ty: Unit
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 0
                    ty:
                      Function:
                        signature_index: 0
                  arguments:
                    - kind:
                        AggregateGet:
                          scope_index: 0
                          local_index: 0
                          value_index: 0
                      ty: U32
                    - kind:
                        AggregateGet:
                          scope_index: 0
                          local_index: 0
                          value_index: 1
                      ty: U32
              ty: Unit
      ty: Unit
signatures:
  - items:
      - U32
      - U32
      - Unit
    params_count: 2
  - items:
      - Unit
    params_count: 0
globals: []
exports:
  - Function:
      id: 1
      name: 7
imports:
  - name: console
    items:
      - Function:
          name: 6
          id: 0
          signature_index: 0
memories: []
aggregates:
  - values:
      - U32
      - U32
strings:
  - 15
