crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__struct_init_lowered_to_struct_create.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 46
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
        result:
          Aggregate:
            aggregate_index: 0
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty: U32
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 1
                      ty: U32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
signatures:
  - items:
      - U32
      - U32
      - Aggregate:
          aggregate_index: 0
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 46
      name: 77
imports: []
memories: []
aggregates:
  - values:
      - U32
      - U32
    offsets:
      - 0
      - 4
    layout:
      size: 8
      align: 4
    decl_to_phys:
      - 0
      - 1
static_entries: []
start_function: ~
