crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__tuple_type_alias_transparent_in_mir.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 46
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result:
          Aggregate:
            aggregate_index: 0
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        Int:
                          value: 1
                      ty: U32
                    - kind:
                        Int:
                          value: 2
                      ty: U32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
    params_count: 0
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 46
      name: 73
imports: []
memories: []
aggregates:
  - values:
      - U32
      - U32
    offsets:
      - 0
      - 4
    layout:
      size: 8
      align: 4
    decl_to_phys:
      - 0
      - 1
static_entries: []
start_function: ~
